# lame.js

./: CMakeLists.txt  LICENSE  README.md
platform/include/: config.h
src/: lamejs.cpp  lamejs.h
tests/: index.html
tests/js/: tests.js
